// Vitest Snapshot v1

exports[`mergeWith() > empty->entity with pattern 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": "a-pattern",
      "fields": [],
      "name": "Foo",
    },
  ],
  "indexes": [],
  "patterns": [
    {
      "name": "a-pattern",
      "pattern": "^hello$",
    },
  ],
  "valueTypes": [],
}
`;

exports[`mergeWith() > field with index 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "index": "unique-index",
          "name": "title",
          "type": "String",
        },
      ],
      "name": "Foo",
    },
  ],
  "indexes": [
    {
      "name": "unique-index",
      "type": "unique",
    },
  ],
  "patterns": [],
  "valueTypes": [],
}
`;

exports[`mergeWith() > field with matchPattern 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "matchPattern": "a-pattern",
          "name": "title",
          "type": "String",
        },
      ],
      "name": "Foo",
    },
  ],
  "indexes": [],
  "patterns": [
    {
      "name": "a-pattern",
      "pattern": "^pattern$",
    },
  ],
  "valueTypes": [],
}
`;

exports[`mergeWith() > unused index is removed 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [],
      "name": "Foo",
    },
  ],
  "indexes": [],
  "patterns": [],
  "valueTypes": [],
}
`;

exports[`mergeWith() > unused pattern is removed 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [],
      "name": "Foo",
    },
  ],
  "indexes": [],
  "patterns": [],
  "valueTypes": [],
}
`;

exports[`mergeWith() > update pattern 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": "a-pattern",
      "fields": [],
      "name": "Foo",
    },
  ],
  "indexes": [],
  "patterns": [
    {
      "name": "a-pattern",
      "pattern": "^new-pattern$",
    },
  ],
  "valueTypes": [],
}
`;
